Instert list - ex. complete 80%

--- a/index.html
+++ b/index.html
@@ -13,17 +13,13 @@
   <div id="site">
 
     <header class="main-header">
-      <h1 class="title text-center col-primary">Todo List <small>Francesco Scarniglia</small></h1>
+      <h1 class="title text-center">Todo List Clone <small>Francesco Scarniglia</small></h1>
     </header> <!-- meinHeader -->
 
     <main class="main-content">
     <input class="add-element" type="text" placeholder="Inserisci altro nella lista">
     <ul class="todo-list">
-      <li class="element">Acqua <i class="far fa-trash-alt"></i></li>
-      <li class="element">Carne bianca <i class="far fa-trash-alt"></i></li>
-      <li class="element completed">Frutta<i class="far fa-trash-alt"></i></li>
-      <li class="element">Legumi<i class="far fa-trash-alt"></i></li>
-      <li class="element">Verdura<i class="far fa-trash-alt"></i></li>
+      
     </ul>
 
     </main> <!-- main-content -->
@@ -36,7 +32,7 @@
 
   <!-- template -->
   <div class="template">
-    <li class="element">Pesce azzurro <i class="far fa-trash-alt"></i></li>
+    <li class="element"><i class="far fa-trash-alt"></i> </li>
   </div><!-- template -->
 
 
