Add DELETE from keyup

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <main class="main-content">
     <input class="add-element" type="text" placeholder="Inserisci altro nella lista">
     <ul class="todo-list">
-      
+
     </ul>
 
     </main> <!-- main-content -->
 
     <footer class="main-footer">
-
+      <p class="text-center">Puoi eliminare tutti gli elementi con il tasto DELETE </p>
     </footer>
 
   </div> <!-- site -->
