delete last whit keyup delete and clear all with keyup esc

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </main> <!-- main-content -->
 
     <footer class="main-footer">
-      <p class="text-center">Puoi eliminare tutti gli elementi con il tasto DELETE </p>
+      <p class="text-center">Pulisci lista = ESC | Cancella ultimo elemento = DELETE </p>
     </footer>
 
   </div> <!-- site -->
